--- a/skins_adm/bootstrap/rsc/css/style.less
+++ b/skins_adm/bootstrap/rsc/css/style.less
@@ -1288,7 +1288,7 @@ div.level3 nav .nav > li {
 	.border-radius;
 	padding: 5px;
 	float: left;
-	margin: 15px;
+	margin: 5px;
 	.skinshot_placeholder {
 		width: 240px;
 		height: 180px;
@@ -1313,12 +1313,6 @@ div.level3 nav .nav > li {
 		padding: 0;
 		float: none;
 		margin: -1ex -1ex 1ex -1ex;
-	}
-}
-.skin_selector_block {
-	margin: -15px 0 0 -15px;
-	.skinshot {
-		margin: 15px 0 0 15px;
 	}
 }
 .skinshot_new {
